editors/recite-tree-sitter/test/corpus/brackets.txt
================================================================================
Bracketed prose, markup and incomplete brackets preserve physical lines
================================================================================
:: start default
> note@11111111111111111111 bind=(name:string=$name)
  [Junction. N-2.] [slow]Wait.[/slow] {name}
  The plan says [cable shaft], not [stairs].
  [Unclosed.
> following@22222222222222222222
  Again.
-> END

--------------------------------------------------------------------------------

(source_file
  (block_statement
    (block_marker)
    (hspace)
    (block_name
      (identifier))
    (block_attribute
      (hspace)
      (block_default))
    (newline))
  (line_statement
    (line_marker)
    (hspace)
    (line_name
      (identifier)
      (id_suffix
        (stable_id)))
    (header_attribute
      (hspace)
      (metadata_field
        (metadata_key
          (identifier))
        (value
          (grouped_value
            (expression_part
              (binding
                (identifier)
                (type_name
                  (identifier))
                (value
                  (runtime_binding
                    (identifier)))))))))
    (newline))
  (prose_line
    (indent)
    (prose_text
      (prose_start)
      (prose_content)
      (prose_content)
      (prose_content)
      (markup_tag
        (markup_name))
      (prose_content)
      (markup_tag
        (markup_name))
      (prose_content)
      (interpolation
        (placeholder
          (identifier))))
    (newline))
  (prose_line
    (indent)
    (prose_text
      (prose_start)
      (prose_content)
      (prose_content)
      (prose_content)
      (prose_content)
      (markup_tag
        (markup_name))
      (prose_content))
    (newline))
  (prose_line
    (indent)
    (prose_text
      (prose_start)
      (prose_content))
    (newline))
  (line_statement
    (line_marker)
    (hspace)
    (line_name
      (identifier)
      (id_suffix
        (stable_id)))
    (newline))
  (prose_line
    (indent)
    (prose_text
      (prose_start))
    (newline))
  (divert_statement
    (divert_marker)
    (hspace)
    (target
      (end_target))
    (newline)))
